# flake

./: .gitignore  Cargo.toml  README-neon.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
pkg/: README.md  package.json
pkg/dist-node/: index.js  index.js.map
pkg/dist-src/: index.js  index.js.map
pkg/dist-types/: index.d.ts  index.d.ts.map
pkg/dist-web/: index.js  index.js.map
src/: flake.ts  index.ts
src/native/: index.d.ts  lib.rs
